--- a/laravel/.env.example
+++ b/laravel/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:BIPHo0B3Mi1NWeuco4z32mtBNwvMdh++fcLH75XIr8Y=
 APP_DEBUG=true
 APP_URL=http://localhost
 
